<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_my_category"
        android:title=""
        app:actionLayout="@layout/category_menu_item"
        app:theme="@style/NavigationDrawerStyles"
        />

    <item
        android:id="@+id/nav_app_update"
        android:icon="@drawable/ic_menu_account"
        android:title="@string/app_updates" />

    <item
        android:id="@+id/nav_my_profile"
        android:icon="@drawable/ic_orders"
        android:title="@string/my_pofile" />

<!--    <item-->
<!--        android:id="@+id/nav_my_subscription"-->
<!--        android:icon="@drawable/ic_subscription"-->
<!--        android:title="@string/nav_my_subscription" />-->
<!--    <item-->
<!--        android:id="@+id/nav_daily_subscribe"-->
<!--        android:icon="@drawable/ic_subscription"-->
<!--        android:title="@string/nav_daily_subscription" />-->

<!--    <item-->
<!--        android:id="@+id/nav_customized_subscription"-->
<!--        android:icon="@drawable/ic_subscription"-->
<!--        android:title="@string/nav_cusomized_subscription" />-->
<!--    <item-->
<!--        android:id="@+id/nav_b2b_purchase"-->
<!--        android:icon="@drawable/ic_btb"-->
<!--        android:title="@string/nav_b2b_purchase" />-->

    <item
        android:id="@+id/nav_buy_package"
        android:icon="@drawable/ic_orders"
        android:title="@string/buy_package" />

    <item
        android:id="@+id/nav_self_test"
        android:icon="@drawable/ic_aboutus"
        android:title="@string/self_test" />
    <item
        android:id="@+id/nav_main_test"
        android:icon="@drawable/ic_policyy"
        android:title="@string/main_test" />


    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_log_out"
        android:title="@string/nav_logout" />
</menu>

