<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/bottom_menu_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/bottom_menu_orders"
        android:title="@string/nav_orders" />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/bottom_menu_category"
        android:title="@string/nav_category" />
<!--    <item-->
<!--        android:id="@+id/nav_wallet"-->
<!--        android:icon="@drawable/bottom_menu_wallet"-->
<!--        android:title="@string/nav_wallet" />-->
<!--    <item-->
<!--        android:id="@+id/nav_subscribe"-->
<!--        android:icon="@drawable/bottom_menu_subscribe"-->
<!--        android:title="@string/nav_subscribe" />-->

</menu>