<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_package"
        android:icon="@drawable/bottom_menu_home"
        android:title="@string/my_package" />

    <item
        android:id="@+id/nav_my_test"
        android:icon="@drawable/bottom_menu_orders"
        android:title="@string/my_test" />

    <item
        android:id="@+id/nav_profile_test"
        android:icon="@drawable/bottom_menu_category"
        android:title="@string/profile"/>
<!--    <item-->
<!--        android:id="@+id/nav_wallet"-->
<!--        android:icon="@drawable/bottom_menu_wallet"-->
<!--        android:title="@string/nav_wallet" />-->
<!--    <item-->
<!--        android:id="@+id/nav_subscribe"-->
<!--        android:icon="@drawable/bottom_menu_subscribe"-->
<!--        android:title="@string/nav_subscribe" />-->

</menu>